--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.ide.visualstudio": "2.0.3",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.render-pipelines.core": "7.1.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
