--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.visualstudio": "2.0.3",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.render-pipelines.core": "7.1.8",
